<resources>
    <string name="app_name">DiceMath-CIS436</string>
    <string name="RollButtonText">Roll Die</string>
    <string name="GuessButtonText">Guess</string>
    <string name="MessageText">Message</string>
    <string name="GuessHint">0</string>
    <string name="DiceAlt">Dice Image</string>

    <string name="JackpotText">Jackpot: %1$d</string>
    <string name="P1Text">Player 1:\n%1$d</string>
    <string name="P2Text">Player 2:\n%1$d</string>
    <string name="GuessText">%1$d %2$s %3$d = </string>

    <string name="currentPlayer">Current Player: %1$d</string>
    <string name="doublePoints">Double Points!</string>
    <string name="jackpot">Jackpot!</string>
    <string name="loseTurn">Lose a turn!</string>
    <string name="notInteger">Guess must be an Integer</string>
    <string name="winText">Player %1$d wins!</string>
    <string name="wrongAnswer">Wrong Answer!</string>
    <string name="correctAnswer">Correct Answer!</string>
</resources>